Some more modifications of the libs from python2 to python3

--- a/src/todo.txt
+++ b/src/todo.txt
@@ -7,13 +7,13 @@ chain.py        TODO/Done?
 data.py         TODO/Done?
 dump.py         TODO/Done?
 ensight.py      TODO/Done?
-gl.py           TODO
+gl.py           TODO/To wipe?
 gnu.py          TODO/Done?
-histo.py        TODO
-image.py        TODO
-ldump.py        TODO
-log.py          TODO
-matlab.py       TODO
+histo.py        TODO/Done?
+image.py        TODO/Done?
+ldump.py        TODO/Done?
+log.py          TODO/Done?
+matlab.py       TODO/to wipe?
 mdump.py        TODO
 olog.py         TODO
 pair.py         TODO
