It's finally over! All files are python3 compatible (still need testing for debugging...)

--- a/src/todo.txt
+++ b/src/todo.txt
@@ -22,13 +22,13 @@ pdbfile.py      TODO
 pizza.py        TODO
 plotview.py     TODO/Done?
 rasmol.py       TODO/Done?
-raster.py       TODO
-sdata.py        TODO
-svg.py          TODO
-tdump.py        TODO
-vcr.py          TODO
-vec.py          TODO
-vizinfo.py      TODO
-vmd.py          TODO
-vtk.py          TODO
-xyz.py          TODO
+raster.py       TODO/Done?
+sdata.py        TODO/Done?
+svg.py          TODO/Done?
+tdump.py        TODO/Done?
+vcr.py          TODO/Done?
+vec.py          TODO/Done?
+vizinfo.py      TODO/Done?
+vmd.py          TODO/Done?
+vtk.py          TODO/Done?
+xyz.py          TODO/Done?
